nginx-ingress/demo-app-ssl/feature-add-ingress.services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    component-identifier: web
  name: web
  namespace: feature-add-ingress-manual
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    component-identifier: web
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
