nginx-ingress/demo-app-ssl/feature-add-ingress.ingress-if-generating-a-cert-for-port-443.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/secure-backends: "true"
  name: web
  namespace: feature-add-ingress-manual
spec:
  tls:
  - secretName: nginx-ingress-controller-wildcard-ssl-certificate
    hosts:
    - hello.foo.continuouspipe.net
  rules:
  - host: hello.foo.continuouspipe.net
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 443
status:
  loadBalancer: {}
