nginx-ingress/demo-app-ssl/feature-add-ingress.ingress-if-port-80-only.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/secure-backends: "false"
  name: web
  namespace: feature-add-ingress-manual
spec:
  rules:
  - host: something.continuouspipe.net
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
status:
  loadBalancer: {}
